Fixed z-index of main block.

--- a/css/base.css
+++ b/css/base.css
@@ -7,7 +7,7 @@ html {
     font-family: Arial, sans-serif;
 }
 body {
-    margin-bottom: 60px;
+    margin-bottom: 61px;
 }
 h1 {
     margin: 0 10px;
